# nuvu-scan

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
nuvu_scan/: __init__.py
nuvu_scan/cli/: main.py
nuvu_scan/cli/commands/: scan.py
nuvu_scan/cli/formatters/: csv.py  html.py  json.py
nuvu_scan/core/: __init__.py  base.py
nuvu_scan/core/models/: __init__.py
nuvu_scan/core/providers/aws/: aws_scanner.py
nuvu_scan/core/providers/aws/collectors/: __init__.py  apigateway.py  athena.py  backup.py  cloudfront.py  cloudtrail.py  cloudwatch.py  cost_explorer.py  dynamodb.py  ec2.py  ecs.py  eks.py  elasticache.py  elb.py  glue.py  iam.py  kinesis.py  kms.py  lakeformation.py  lambda_collector.py  misc_services.py  mwaa.py  rds.py  redshift.py  route53.py  s3.py  secrets.py  security_services.py  sns_sqs.py  vpc_costs.py
nuvu_scan/core/providers/gcp/: gcp_scanner.py
nuvu_scan/core/providers/gcp/collectors/: bigquery.py  billing.py  gcs.py  gemini.py
tests/: test_base.py  test_cli.py  test_formatters.py  test_push_payload.py  test_scanners.py
