[project]
name = "nuvu-scan"
version = "1.3.6"
description = "Multi-Cloud Data Asset Control - CLI tool for discovering and analyzing cloud data infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nuvu", email = "info@nuvu.dev"}
]
keywords = ["aws", "cloud", "data", "governance", "infrastructure", "scanning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "boto3>=1.28.0",
    "click>=8.0.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-dataproc>=5.4.0",
    "google-cloud-pubsub>=2.18.0",
    "google-auth>=2.23.0",
    "google-api-python-client>=2.100.0",
    "google-cloud-billing>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://nuvu.dev"
Documentation = "https://github.com/flexilogix/nuvu-scan#readme"
Repository = "https://github.com/flexilogix/nuvu-scan"
Issues = "https://github.com/flexilogix/nuvu-scan/issues"

[project.scripts]
nuvu = "nuvu_scan.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
